--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "React Avançado - Boilerplate",
-  "short_name": "React Avançado",
+  "name": "nextjs Boilerplate",
+  "short_name": "nextplate",
   "icons": [
     {
       "src": "/img/icon-192.png",
